--- a/testeFront/meus_agendamentos.html
+++ b/testeFront/meus_agendamentos.html
@@ -71,8 +71,10 @@
             </div>
         </div>
 
+        <!-- JavaScript -->
+        <script src="auth.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="meus_agendamentos.js" defer></script>
+        <script type="module" src="meus_agendamentos.js" defer></script>
 </body>
 
 </html>
