--- a/testeFront/agendamentos_pendentes.html
+++ b/testeFront/agendamentos_pendentes.html
@@ -7,8 +7,8 @@
     <title>Agendamentos Pendentes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300" rel="stylesheet">
-    <link rel="stylesheet" href="pagina_recepcionista.css"> 
-    <link rel="stylesheet" href="agendamentos_pendentes.css"> 
+    <link rel="stylesheet" href="pagina_recepcionista.css"> <!-- CSS compartilhado -->
+    <link rel="stylesheet" href="agendamentos_pendentes.css"> <!-- CSS específico -->
 </head>
 
 <body>
@@ -86,7 +86,9 @@
         </div>
     </div>
 
-    <script src="agendamentos_pendentes.js"></script>
+    <!-- Inclua o arquivo JavaScript -->
+    <script src="auth.js"></script>
+    <script type="module" src="agendamentos_pendentes.js"></script>
 </body>
 
 </html>
