--- a/testeFront/agendar_reposicao.html
+++ b/testeFront/agendar_reposicao.html
@@ -7,9 +7,7 @@
     <title>Agendar Reposição</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300" rel="stylesheet">
-    <link rel="stylesheet" href="agendar_reposicao.css"> 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="agendar_reposicao.js" defer></script>
+    <link rel="stylesheet" href="agendar_reposicao.css"> <!-- CSS específico -->
 </head>
 
 <body>
@@ -70,6 +68,7 @@
                 <label for="horario" class="form-label">Horário</label>
                 <select id="horario" required>
                     <option value="">Selecione um horário</option>
+                    <!-- As opções de horários serão preenchidas via JavaScript -->
                 </select>
             </div>
             <div class="form-element form-submit">
@@ -78,12 +77,15 @@
         </form>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="auth.js"></script>
+    <script type="module" src="agendar_reposicao.js" defer></script>
     <script>
-        // Função de logout
-        document.getElementById("logoutButton").onclick = function () {
-            localStorage.clear(); 
-            window.location.href = 'index.html'; // Redireciona para a página de login
-        };
+        document.getElementById('logout').addEventListener('click', function () {
+            localStorage.removeItem('raAluno');
+            localStorage.removeItem('token');
+            window.location.href = 'index.html';
+        });
     </script>
 </body>
 
