--- a/testeFront/index.html
+++ b/testeFront/index.html
@@ -87,6 +87,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.15/paper-full.min.js"></script>
     <script src="script.js"></script>
+    <script src="auth.js"></script>
 </body>
 
 </html>
