--- a/testeFront/pagina_aluno.html
+++ b/testeFront/pagina_aluno.html
@@ -130,9 +130,11 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="pagina_aluno.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/locales/pt-br.js"></script>
+    <script src="auth.js"></script>
+    <script type="module" src="pagina_aluno.js"></script>
 </body>
 
 </html>
